<resources>
    <string name="AppName">DuckDuckGo</string>
    <string name="SearchStringSmall">Search DDG or type URL</string>
    <string name="SearchStringBig">Search DuckDuckGo or type URL</string>
    <string name="SettingsButtonContentDescription">Settings</string>
    <string name="HomeButtonContentDescription">Home</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="PrefGroupGeneral">General</string>
    <string name="PrefGroupStories">Stories</string>
    <string name="PrefGroupSearch">Search</string>
    <string name="PrefGroupOther">Other</string>
    <string name="PrefGroupAppFlow">Application</string>
    <string name="PrefGroupPrivacy">Privacy</string>
    <string name="PrefGroupFeedback">Feedback</string>
    <string name="PrefTheme">Theme</string>
    <string name="PrefThemeLight">Light</string>
    <string name="PrefThemeDark">Dark</string>
    <string name="PrefStartScreen">Homepage</string>
    <string name="PrefStories">Stories</string>
    <string name="PrefWaterCoolerStories">Stories</string>
    <string name="PrefSavedItems">@string/favorites</string>
    <string name="PrefDuckMode">Search</string>
    <string name="PrefRecentSearch">@string/recents</string>
    <string name="PrefRecordHistory">Save Recents</string>
    <string name="PrefClearHistory">Clear Recents</string>
    <string name="PrefRecordCookies">Save Cookies</string>
    <string name="PrefClearCookies">Clear Cookies</string>
    <string name="PrefClearBrowserCache">Clear Browser Cache</string>
    <string name="PrefClearCacheAndCookies">Clear Cookies and Cache</string>
    <string name="PrefSources">Sources</string>
    <string name="PrefResetSources">Reset Sources</string>
    <string name="PrefRegion">Region</string>
    <string name="PrefDirectQuery">Search on Tap</string>
    <string name="PrefExternalBrowser">Use External Browser</string>
    <string name="PrefExternalApp">Use External App</string>
    <string name="PrefNever">Never</string>
    <string name="PrefExternalBrowserExceptSearches">For non-search results</string>
    <string name="PrefExternalBrowserAlways">Always</string>
    <string name="PrefExternalAppAlways">Always</string>
    <string name="PrefClearCacheCookiesEveryLaunch">Every Launch</string>
    <string name="PrefClearCacheCookiesWeekly">Weekly</string>
    <string name="PrefClearCacheCookiesMonthly">Monthly</string>
    <string name="PrefSendFeedback">Leave Feedback</string>
    <string name="PrefAbout">About</string>
    <string name="PrefRate">Rate App</string>
    <string name="PrefAppSearch">Include Apps</string>
    <string name="PrefMainFontSize">Font Size</string>
    <string name="PrefEnableAcra">Automatic Crash Report</string>
    <string name="PrefAcraDisabled">Automatic Reporting Disabled</string>
    <string name="PrefAcraEnabled">Automatic Reporting Enabled</string>
    <string name="PrefEnableJavascript">Enable JavaScript</string>
    <string name="PrefWaterCooler">Stories</string>
    <string name="PrefAutocomplete">Autocomplete</string>
    <string name="PrefSearchResults">Search Results</string>
    <string name="PrefTurnOffAutocomplete">Disabled</string>
    <string name="PrefAutoUpdate">Automatic Feed Refresh</string>
    <string name="PrefReadable">Readability</string>
    <string name="PrefReadableSummary">On, when available</string>
    <string name="PrefGroupTor">Tor</string>
    <string name="PrefEnableTor">Enable Tor</string>
    <string name="PrefCheckOrbotStatus">Check Orbot status</string>
    <string name="OrbotStatusOkTitle">Orbot status</string>
    <string name="OrbotStatusOkMessage">Orbot seems to be running fine!</string>
    <string name="OrbotCheckSite">https://check.torproject.org</string>
    <string name="ShareStory">Share Story</string>
    <string name="ShareSearch">Share Search</string>
    <string name="SharePage">Share Page</string>
    <string name="RegularShareFormat">%1$s via DuckDuckGo for Android</string>
    <string name="TwitterShareFormat">%1$s via @duckduckgo for Android</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Save">Save</string>
    <string name="Unsave">Unsave</string>
    <string name="Share">Share</string>
    <string name="Refresh">Refresh</string>
    <string name="Delete">Delete</string>
    <string name="LeftStories">Stories</string>
    <string name="LeftSaved">Saved</string>
    <string name="LeftSettings">Settings</string>
    <string name="LeftRecent">Recent</string>
    <string name="LeftRecentQueries">Recent Queries</string>
    <string name="Confirm">Confirm</string>
    <string name="ConfirmClearHistory">All search history will be deleted. Are you sure?</string>
    <string name="ConfirmClearCookies">All the cookies will be deleted. Are you sure?</string>
    <string name="ConfirmClearCacheAndCookies">Browser cache will be deleted. Are you sure?</string>
    <string name="Default">Default</string>
    <string name="Defaults">Reset to Default</string>
    <string name="SuggestSource">Suggest a Source</string>
    <string name="SuggestedSources">Please include these sources:</string>
    <string name="FeedbackTo">DuckDuckGo Feedback &lt;help@duckduckgo.com&gt;</string>
    <string name="FeedbackSubject">DuckDuckGo Android v2</string>
    <string name="SavedFeedEmptyTitle">You have no saved stories</string>
    <string name="SavedFeedEmptySubTitle">You can save stories in the search bar\'s actions menu.</string>
    <string name="SavedResultsEmptyTitle">You have no saved results</string>
    <string name="SavedResultsEmptySubTitle">You can save your search results in the search bar\'s actions menu.</string>
    <string name="MoreMenuTitle">Page Options</string>
    <string name="OpenInExternalBrowser">Open in External Browser</string>
    <string name="ConfirmExternalBrowser">Please Confirm</string>
    <string name="ChangingFontSize">Changing Font Size&#8230;</string>
    <string name="crash_toast_text">Application crashed! Crash-related data will be collected and reported upon confirmation.</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report&#8230;</string>
    <string name="crash_notif_title">DuckDuckGo crash report</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_text">An unexpected error occurred.
        Please help us fix the problem by clicking \'OK\' to send crash-related data. 
        The only data we will receive is: APP_VERSION_CODE, APP_VERSION_NAME, ANDROID_VERSION, STACK_TRACE,
        AVAILABLE_MEM_SIZE, ReportField.USER_COMMENT, LOGCAT.</string>
    <string name="crash_dialog_comment_prompt">Your comment: </string>
    <string name="crash_dialog_ok_toast">Thank you for your help!</string>
    <string name="ErrorAppNotFound">App Not Found</string>
    <string name="ErrorActivityNotFound">No related activity found!</string>
    <string name="ErrorDownloadFailed">Download failed!</string>
    <string name="ErrorDownloadOpenFail">Downloaded file could not be opened!</string>
    <string name="ToastSchemeNotSupported">Unable to download file</string>
    <string name="ToastDownloadManagerUnavailable">Unable to download file</string>
    <string name="InfoReadStoriesFromCache">Connection failed! Stories retrieved from cache&#8230;</string>
    <string name="DefaultsSetToast">Sources reset to default.</string>
    <string name="SuggestSourceToast">To be implemented.</string>
    <string name="Loading">Loading&#8230;</string>
    <string name="SummaryWaterCooler">
        These sources create a stream of interesting stories you won\'t find in regular news apps.
        All of the sources are special feeds like \"most shared\" or \"most up-voted.\"
        Check it out when you\'re waiting around for five minutes.
        Note: you can remove Stories from your home screen using the \"Home Screen\" setting.
    </string>
    <string name="WaterCoolerSources">Stories</string>
    <string name="InformHistory"><i>Save recents</i> is disabled. You can enable it in <i>Settings.</i></string>
    <string name="Continue">Continue</string>
    <string name="Retry">Retry</string>
    <string name="ErrorFeedTitle">Error: Feed request</string>
    <string name="ErrorFeedDetail">Feed request failed, possibly because of a connection problem.
        You will still be able to browse cached items or you may choose to retry.</string>
    <string name="Apply">Apply</string>
    <string name="Cancel">Cancel</string>
    <string name="NoChange">No Change</string>
    <string name="OnlyOnPhone">Only on Phone</string>
    <string name="SelectAppToSend">Select application to send</string>
    <string name="ReadabilityOn">Readability On</string>
    <string name="ReadabilityOff">Readability Off</string>
    <string name="SavedSearches">Saved Searches</string>
    <string name="SavedStories">Saved Stories</string>
    <string name="StoryOptionsTitle">Story Options</string>
    <string name="SearchOptionsTitle">Search Options</string>
    <string name="PageOptionsTitle">Page Options</string>
    <string name="ToastUnSaveStory">The story has been removed from your saved stories.</string>
    <string name="ToastUnSaveSearch">The search has been removed from your saved searches.</string>
    <string name="ToastSaveStory">Your story was saved.</string>
    <string name="ToastSaveSearch">Your search was saved.</string>
    <string name="ToastDeleteStoryInHistory">The story has been removed from your history.</string>
    <string name="ToastDeleteUrlInHistory">The url has been removed from your history.</string>
    <string name="WelcomeHeader">Introducing</string>
    <string name="WelcomeTitle">DuckDuckGo Search &amp; Stories</string>
    <string name="WelcomeDescription">
        Search Anonymously.\nFind Instantly.\nStay Informed.</string>
    <string name="GetStarted">Get Started</string>
    <string name="BangButtonExplanation">Searching on other sites is easy with !bang commands.</string>
    <string name="LeftRecentSearches">Recent Searches</string>
    <string name="LeftRecentStories">Recent Stories</string>
    <string name="NewSources">We\'ve added some cool new story sources!</string>
    <string name="NewSourcesOk">Show me</string>
    <string name="NewSourcesNoThx">Later</string>
    <string name="about_text">The search engine that doesn\'t\ntrack you.</string>
    <string name="version">Version</string>
    <string name="help">Help</string>
    <string name="android_help_center">Android Help Center</string>
    <string name="rate">Rate the App</string>
    <string name="options">Options</string>
    <string name="action_stories">@string/stories</string>
    <string name="action_recents">@string/recents</string>
    <string name="action_favorites">@string/favorites</string>
    <string name="action_settings">@string/settings</string>
    <string name="action_help_feedback">Help &amp; Feedback</string>
    <string name="privacy_title">Real Privacy</string>
    <string name="privacy_subtitle">We never store or share your\npersonal information. Ever.</string>
    <string name="no_ads_title">We don’t follow you\naround with ads.</string>
    <string name="no_ads_subtitle">Since we don’t store your personal info, we\nhave none to share with advertisers.</string>
    <string name="no_tracking_title">No Tracking</string>
    <string name="no_tracking_subtitle">Other search engines track you even\nwhen you’re in ‘private browsing mode’.\nWe don’t track you — period.</string>
    <string name="right_title">Privacy is a Right!</string>
    <string name="right_subtitle">Use DuckDuckGo and take\nback your privacy!</string>
    <string name="instruction_title">Use DuckDuckGo in %s</string>
    <string name="instruction_message">"Other search engines track your searches even when you’re in private browsing mode. We don’t track you — period."</string>
    <string name="instruction_done">Done!</string>
</resources>