<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/PrefGroupAppFlow">
	<ListPreference 
	android:title="@string/PrefStartScreen"
	android:key="startScreenPref"
	android:defaultValue="0"
	android:entries="@array/startScreenArray"
    android:entryValues="@array/startScreenValues">
	</ListPreference>
	<Preference 
	android:title="@string/PrefSources"
	android:key="sourcesPref"
	android:defaultValue="">
	</Preference>
	<Preference 
	android:title="@string/PrefResetSources"
	android:key="resetSourcesPref"
	android:defaultValue="">
	</Preference>
</PreferenceCategory>
<PreferenceCategory android:title="@string/PrefGroupPrivacy">
	<CheckBoxPreference 
	android:title="@string/PrefRecordHistory"
	android:key="recordHistoryPref"
	android:defaultValue="false" />
	<Preference 
	android:title="@string/PrefClearHistory"
	android:key="clearHistoryPref"
	android:defaultValue="" />
</PreferenceCategory>
</PreferenceScreen>
