<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:visibility="visible"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingStart="30dp"
              android:paddingLeft="30dp"
              android:paddingEnd="30dp"
              android:paddingRight="30dp"
              android:paddingTop="19.3dp"
              android:paddingBottom="15.6dp">

    <View
        android:background="#330000ff"
        android:layout_width="70.2dp"
        android:layout_height="70.2dp"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19.8dp"
            android:layout_marginLeft="19.8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:background="#330000ff"
                android:textSize="18sp"
                android:textColor="#333333"
                android:text="@string/privacy_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#330000ff"
                android:text="@string/privacy_subtitle"
                android:textSize="14sp"
                android:textColor="#666666"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19.8dp"
            android:layout_marginLeft="19.8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:background="#330000ff"
                android:textSize="18sp"
                android:textColor="#333333"
                android:text="@string/no_ads_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#330000ff"
                android:text="@string/no_ads_subtitle"
                android:textSize="14sp"
                android:textColor="#666666"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19.8dp"
            android:layout_marginLeft="19.8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:background="#330000ff"
                android:textSize="18sp"
                android:textColor="#333333"
                android:text="@string/no_tracking_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#330000ff"
                android:text="@string/no_tracking_subtitle"
                android:textSize="14sp"
                android:textColor="#666666"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19.8dp"
            android:layout_marginLeft="19.8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:background="#330000ff"
                android:textSize="18sp"
                android:textColor="#333333"
                android:text="@string/right_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#330000ff"
                android:text="@string/right_subtitle"
                android:textSize="14sp"
                android:textColor="#666666"/>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>