<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingStart="16dp"
             android:paddingLeft="16dp"
             android:paddingEnd="16dp"
             android:paddingRight="16dp"><!--
    android:background="#ff0000"-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/instruction_background_2">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@android:color/transparent"
            android:src="@drawable/instruction3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/instruction_title"
            android:textSize="22sp"
            android:textColor="@color/onboarding_primary_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/instruction_message"
            android:textSize="16sp"
            android:textColor="@color/onboarding_secondary_text"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:gravity="start"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/instructions1_3"/>
                <TextView
                    android:id="@+id/instruction_1_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:textColor="@color/onboarding_secondary_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/instructions2_3"/>
                <TextView
                    android:id="@+id/instruction_2_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:textColor="@color/onboarding_secondary_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/instructions3_3"/>
                <TextView
                    android:id="@+id/instruction_3_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:textColor="@color/onboarding_secondary_text"/>
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27.1dp"
            android:text="@string/instruction_done"
            android:textColor="@color/onboarding_accent"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/><!--
            android:layout_gravity="end"-->

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>